Refactored code and created a new structure

--- a/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_COMPAS_Without_Sensitive_Attributes_Results.ipynb
+++ b/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_COMPAS_Without_Sensitive_Attributes_Results.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -18,11 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -54,11 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Import dependencies"
    ]
@@ -66,11 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -81,19 +65,15 @@
     "from IPython.display import display\n",
     "\n",
     "from configs import config\n",
-    "from utils.custom_classes.metrics_composer import MetricsComposer\n",
-    "from utils.custom_classes.metrics_visualizer import MetricsVisualizer\n",
+    "from source.custom_classes.metrics_composer import MetricsComposer\n",
+    "from source.custom_classes.metrics_visualizer import MetricsVisualizer\n",
     "\n",
     "sns.set_theme(style=\"whitegrid\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Create average metrics files"
    ]
@@ -101,11 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -135,11 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "visualizer = MetricsVisualizer(METRICS_PATH, DATASET_NAME, MODELS_NAMES, SENSITIVE_ATTRIBUTES)"
@@ -148,11 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -446,11 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Visualize average metrics"
    ]
@@ -458,11 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -593,11 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Overall metrics visualizations"
    ]
@@ -605,11 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def overall_metric_comparison(prediction_metric_name, dataset_name, models_average_results_dct):\n",
@@ -633,11 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -662,11 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -689,11 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -716,11 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -996,11 +932,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bias_metrics_lst = [\n",
@@ -1017,11 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "variance_metrics_lst = [\n",
@@ -1038,11 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1224,11 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def color_df(val):\n",
