--- a/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_Folktables_Results.ipynb
+++ b/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_Folktables_Results.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -18,11 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -54,11 +46,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Import dependencies"
    ]
@@ -66,11 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import altair as alt\n",
@@ -81,19 +65,15 @@
     "from IPython.display import display\n",
     "\n",
     "from configs import config\n",
-    "from utils.data_viz_utils import create_average_metrics_df, visualize_fairness_metrics_for_prediction_metric\n",
-    "from utils.custom_classes.metrics_composer import MetricsComposer\n",
+    "from source.data_viz_utils import create_average_metrics_df, visualize_fairness_metrics_for_prediction_metric\n",
+    "from source.custom_classes.metrics_composer import MetricsComposer\n",
     "\n",
     "sns.set_theme(style=\"whitegrid\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Create average metrics files"
    ]
@@ -101,11 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "STATE = config.DATASET_CONFIG['state']\n",
@@ -118,11 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -145,11 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Visualize average metrics"
    ]
@@ -157,11 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -282,11 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Overall metrics visualizations"
    ]
@@ -294,11 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def visualize_overall_metrics(models_average_results_dct, metrics_names, reversed_metrics_names=[], x_label=\"Prediction Metrics\"):\n",
@@ -334,11 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -362,11 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -388,11 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -414,11 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -440,11 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -988,11 +924,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1161,11 +1093,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1827,11 +1755,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2124,11 +2048,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def create_models_metrics_bar_chart(df, metrics_lst, default_plot_metric, metrics_group_name):\n",
@@ -2182,11 +2102,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "bias_metrics_lst = [\n",
@@ -2205,11 +2121,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "variance_metrics_lst = [\n",
@@ -2228,11 +2140,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2341,11 +2249,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
