--- a/notebooks/models_tuning/Models_Tuning_Compas.ipynb
+++ b/notebooks/models_tuning/Models_Tuning_Compas.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "7cf003da",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Models Tuning\n",
     "\n",
@@ -17,11 +13,7 @@
   {
    "cell_type": "markdown",
    "id": "9703aea3",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "Enable auto-reloading of external modules"
    ]
@@ -30,11 +22,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "c09f5e2a",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -45,11 +33,7 @@
   {
    "cell_type": "markdown",
    "id": "cb669263",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "Import dependencies"
    ]
@@ -58,11 +42,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "4d166b28",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -75,11 +55,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "b7564726",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -101,19 +77,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "85f4912c",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "from pprint import pprint\n",
     "\n",
-    "from utils.custom_classes.data_loader import CompasWithoutSensitiveAttrsDataset\n",
-    "from utils.model_tuning_utils import *\n",
-    "from configs.config import *\n",
+    "from source.custom_classes.data_loaders import CompasWithoutSensitiveAttrsDataset\n",
+    "from source.model_tuning_utils import test_baseline_models\n",
     "\n",
     "plt.style.use('mpl20')\n",
     "matplotlib.rcParams['figure.dpi'] = 100"
@@ -123,11 +95,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "2bec2528",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -141,11 +109,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "4e25bf65",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "DATASET_NAME = \"COMPAS_Without_Sensitive_Attributes\""
@@ -154,11 +118,7 @@
   {
    "cell_type": "markdown",
    "id": "e34f792f",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Loading ACSEmployment data"
    ]
@@ -167,11 +127,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "d7067c19",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dataset = CompasWithoutSensitiveAttrsDataset(\"./data/COMPAS.csv\")"
@@ -180,11 +136,7 @@
   {
    "cell_type": "markdown",
    "id": "516da935",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Tune hyper-parameters and find the best baseline model"
    ]
@@ -193,11 +145,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "f930a0dd",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4259,11 +4207,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "31139b00",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4332,11 +4276,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "1d77a121",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4388,11 +4328,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "90ed4bb7",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -5578,11 +5514,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2d44c836",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
