--- a/notebooks/models_tuning/Models_Tuning_Folktables.ipynb
+++ b/notebooks/models_tuning/Models_Tuning_Folktables.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "markdown",
    "id": "f6dd23bf",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Models Tuning\n",
     "\n",
@@ -17,11 +13,7 @@
   {
    "cell_type": "markdown",
    "id": "e71c0272",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "Enable auto-reloading of external modules"
    ]
@@ -30,11 +22,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "ea20c05a",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -45,11 +33,7 @@
   {
    "cell_type": "markdown",
    "id": "43153c88",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "Import dependencies"
    ]
@@ -58,11 +42,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "f64caf21",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -75,11 +55,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "b7564726",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -97,19 +73,15 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "35ed6892",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
+    "from pprint import pprint\n",
     "\n",
-    "from utils.custom_classes.data_loader import ACSEmploymentDataset\n",
-    "from utils.model_tuning_utils import *\n",
-    "from configs.config import *\n",
+    "from source.custom_classes.data_loaders import ACSEmploymentDataset\n",
+    "from source.model_tuning_utils import test_baseline_models\n",
     "\n",
     "plt.style.use('mpl20')\n",
     "matplotlib.rcParams['figure.dpi'] = 100"
@@ -119,11 +91,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "03c0914b",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -135,13 +103,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "DATASET_CONFIG = {\n",
+    "    'state': \"GA\",\n",
+    "    'year': 2018,\n",
+    "}"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "6b6e004c",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -164,11 +142,7 @@
   {
    "cell_type": "markdown",
    "id": "e34f792f",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Loading ACSEmployment data"
    ]
@@ -177,11 +151,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "d7067c19",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dataset = ACSEmploymentDataset(state=[STATE], year=YEAR, root_dir='data', with_nulls=False, subsample=20000)"
@@ -190,11 +160,7 @@
   {
    "cell_type": "markdown",
    "id": "bf7d3508",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Tune hyper-parameters and find the best baseline model"
    ]
@@ -203,11 +169,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "fb93705c",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4340,11 +4302,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "1f1fe411",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -4413,11 +4371,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "a560d3d5",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -4469,11 +4423,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "a80e2300",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -5664,11 +5614,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "80018129",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
