--- a/notebooks/hypothesis_space/Hypothesis_Space_Exp_Compas_Without_Sensitive_Attrs.ipynb
+++ b/notebooks/hypothesis_space/Hypothesis_Space_Exp_Compas_Without_Sensitive_Attrs.ipynb
@@ -76,8 +76,8 @@
     "from datetime import datetime, timezone\n",
     "\n",
     "from configs import config\n",
-    "from utils.custom_classes.data_loader import CompasWithoutSensitiveAttrsDataset\n",
-    "from utils.metrics_computation_interfaces import compute_metrics_multiple_runs"
+    "from source.custom_classes.data_loaders import CompasWithoutSensitiveAttrsDataset\n",
+    "from source.metrics_computation_interfaces import compute_metrics_multiple_runs"
    ]
   },
   {
