--- a/notebooks/hypothesis_space/Hypothesis_Space_Exp_Folktables.ipynb
+++ b/notebooks/hypothesis_space/Hypothesis_Space_Exp_Folktables.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "da834340",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -20,11 +16,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "6f563eab",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -58,11 +50,7 @@
   {
    "cell_type": "markdown",
    "id": "6bad8588",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Import dependencies"
    ]
@@ -71,11 +59,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "7a9241de",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -85,21 +69,18 @@
     "\n",
     "from configs import config\n",
     "from configs.constants import ModelSetting\n",
-    "from utils.analyzers.subgroups_variance_analyzer import SubgroupsVarianceAnalyzer\n",
-    "from utils.common_helpers import create_tuned_base_model, save_metrics_to_file\n",
-    "from utils.custom_classes.data_loader import ACSEmploymentDataset\n",
-    "from utils.custom_classes.generic_pipeline import GenericPipeline\n",
-    "from utils.analyzers.subgroups_statistical_bias_analyzer import SubgroupsStatisticalBiasAnalyzer"
+    "from source.analyzers.subgroups_variance_analyzer import SubgroupsVarianceAnalyzer\n",
+    "from source.common_helpers import save_metrics_to_file\n",
+    "from source.custom_initializers import create_tuned_base_model\n",
+    "from source.custom_classes.data_loaders import ACSEmploymentDataset\n",
+    "from source.custom_classes.generic_pipeline import GenericPipeline\n",
+    "from source.analyzers.subgroups_statistical_bias_analyzer import SubgroupsStatisticalBiasAnalyzer"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "543f69b1",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Configs"
    ]
@@ -108,11 +89,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "e8fdf54c",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "STATE = config.DATASET_CONFIG['state']\n",
@@ -131,11 +108,7 @@
   {
    "cell_type": "markdown",
    "id": "7633295a",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Models tuned hyper-parameters"
    ]
@@ -144,11 +117,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "dcff3d20",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -269,11 +238,7 @@
   {
    "cell_type": "markdown",
    "id": "c77966ac",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Load dataset"
    ]
@@ -282,11 +247,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "eaa759db",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -456,11 +417,7 @@
   {
    "cell_type": "markdown",
    "id": "b77fad56",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Run experiments"
    ]
@@ -469,11 +426,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "e785af8f",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def create_base_pipeline(dataset, sensitive_attributes, priv_values, model_seed):\n",
@@ -540,11 +493,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "adc2339a",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def run_experiment(exp_num: int, model_seed_lst: int):\n",
@@ -580,11 +529,7 @@
   {
    "cell_type": "markdown",
    "id": "bf487138",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Experiment 1"
    ]
@@ -594,9 +539,6 @@
    "execution_count": 10,
    "id": "793d532a",
    "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    },
     "scrolled": true
    },
    "outputs": [
@@ -3497,11 +3439,7 @@
   {
    "cell_type": "markdown",
    "id": "1e764342",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Experiment 2"
    ]
@@ -3510,11 +3448,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "581e2dc2",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# run_experiment(exp_num=2, model_seed=200)"
@@ -3524,11 +3458,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4b803d0b",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
