--- a/notebooks/hypothesis_space/Hypothesis_Space_Exp_Compas_Without_Sensitive_Attrs.ipynb
+++ b/notebooks/hypothesis_space/Hypothesis_Space_Exp_Compas_Without_Sensitive_Attrs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 11,
    "id": "248cbed8",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 12,
    "id": "7ec6cd08",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 13,
    "id": "b8cb69f2",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 14,
    "id": "7a9241de",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 15,
    "id": "71d8f24a",
    "metadata": {},
    "outputs": [],
@@ -114,14 +114,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
       "text/plain": "                          Dataset_Name              Model_Name  F1_Score  \\\n0  COMPAS_Without_Sensitive_Attributes      LogisticRegression    0.6785   \n1  COMPAS_Without_Sensitive_Attributes  DecisionTreeClassifier    0.6952   \n2  COMPAS_Without_Sensitive_Attributes  RandomForestClassifier    0.6962   \n3  COMPAS_Without_Sensitive_Attributes           XGBClassifier    0.6971   \n4  COMPAS_Without_Sensitive_Attributes    KNeighborsClassifier    0.7056   \n5  COMPAS_Without_Sensitive_Attributes           MLPClassifier    0.6834   \n\n   Accuracy_Score                                  Model_Best_Params  \n0          0.6837  {'C': 1, 'max_iter': 50, 'penalty': 'l2', 'sol...  \n1          0.6989  {'criterion': 'gini', 'max_depth': 20, 'max_fe...  \n2          0.7008  {'max_depth': 4, 'max_features': 0.6, 'min_sam...  \n3          0.7008  {'lambda': 100, 'learning_rate': 0.1, 'max_dep...  \n4          0.7112  {'metric': 'minkowski', 'n_neighbors': 25, 'we...  \n5          0.6875  {'activation': 'relu', 'hidden_layer_sizes': (...  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Dataset_Name</th>\n      <th>Model_Name</th>\n      <th>F1_Score</th>\n      <th>Accuracy_Score</th>\n      <th>Model_Best_Params</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>COMPAS_Without_Sensitive_Attributes</td>\n      <td>LogisticRegression</td>\n      <td>0.6785</td>\n      <td>0.6837</td>\n      <td>{'C': 1, 'max_iter': 50, 'penalty': 'l2', 'sol...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>COMPAS_Without_Sensitive_Attributes</td>\n      <td>DecisionTreeClassifier</td>\n      <td>0.6952</td>\n      <td>0.6989</td>\n      <td>{'criterion': 'gini', 'max_depth': 20, 'max_fe...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>COMPAS_Without_Sensitive_Attributes</td>\n      <td>RandomForestClassifier</td>\n      <td>0.6962</td>\n      <td>0.7008</td>\n      <td>{'max_depth': 4, 'max_features': 0.6, 'min_sam...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>COMPAS_Without_Sensitive_Attributes</td>\n      <td>XGBClassifier</td>\n      <td>0.6971</td>\n      <td>0.7008</td>\n      <td>{'lambda': 100, 'learning_rate': 0.1, 'max_dep...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>COMPAS_Without_Sensitive_Attributes</td>\n      <td>KNeighborsClassifier</td>\n      <td>0.7056</td>\n      <td>0.7112</td>\n      <td>{'metric': 'minkowski', 'n_neighbors': 25, 'we...</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>COMPAS_Without_Sensitive_Attributes</td>\n      <td>MLPClassifier</td>\n      <td>0.6834</td>\n      <td>0.6875</td>\n      <td>{'activation': 'relu', 'hidden_layer_sizes': (...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 155,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "experiment_models_config = create_models_config_from_tuned_params_df(\n",
@@ -150,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
       "text/plain": "dict_keys(['DecisionTreeClassifier', 'LogisticRegression'])"
      },
-     "execution_count": 157,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 19,
    "id": "3e53fe9a",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
       "text/plain": "   juv_fel_count  juv_misd_count  juv_other_count  priors_count  \\\n0            0.0       -2.340451              1.0    -15.010999   \n1            0.0        0.000000              0.0      0.000000   \n2            0.0        0.000000              0.0      0.000000   \n3            0.0        0.000000              0.0      6.000000   \n4            0.0        0.000000              0.0      7.513697   \n\n   age_cat_25 - 45  age_cat_Greater than 45  age_cat_Less than 25  \\\n0                1                        0                     0   \n1                1                        0                     0   \n2                0                        0                     1   \n3                1                        0                     0   \n4                1                        0                     0   \n\n   c_charge_degree_F  c_charge_degree_M  \n0                  0                  1  \n1                  1                  0  \n2                  1                  0  \n3                  0                  1  \n4                  1                  0  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>juv_fel_count</th>\n      <th>juv_misd_count</th>\n      <th>juv_other_count</th>\n      <th>priors_count</th>\n      <th>age_cat_25 - 45</th>\n      <th>age_cat_Greater than 45</th>\n      <th>age_cat_Less than 25</th>\n      <th>c_charge_degree_F</th>\n      <th>c_charge_degree_M</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.0</td>\n      <td>-2.340451</td>\n      <td>1.0</td>\n      <td>-15.010999</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>6.000000</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>7.513697</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 158,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 20,
    "id": "2528579c",
    "metadata": {},
    "outputs": [
@@ -223,33 +223,16 @@
      "output_type": "stream",
      "text": [
       "##############################  [Model 1 / 2] Analyze DecisionTreeClassifier  ##############################\n",
-      "Model random_state:  101\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-01-23 22:11:36 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Model random_state:  101\n",
       "Baseline X_train shape:  (4222, 9)\n",
-      "Baseline X_test shape:  (1056, 9)\n",
-      "\n",
-      "\n"
+      "Baseline X_test shape:  (1056, 9)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Classifiers testing by bootstrap: 100%|██████████| 10/10 [00:00<00:00, 183.42it/s]\n",
-      "2023-01-23 22:11:36 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n"
+      "2023-01-23 23:09:56 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n"
      ]
     },
     {
@@ -264,7 +247,24 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-23 22:11:36 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n"
+      "\n",
+      "Classifiers testing by bootstrap: 100%|██████████| 10/10 [00:00<00:00, 183.67it/s]\n",
+      "2023-01-23 23:09:56 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-01-23 23:09:56 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n"
      ]
     },
     {
@@ -274,14 +274,14 @@
       "\n",
       "\n",
       "##############################  Stability metrics  ##############################\n",
-      "General Ensemble Accuracy: 0.6771\n",
-      "Mean: 0.5254\n",
-      "Std: 0.0737\n",
-      "IQR: 0.0874\n",
+      "General Ensemble Accuracy: 0.6761\n",
+      "Mean: 0.5283\n",
+      "Std: 0.0685\n",
+      "IQR: 0.0805\n",
       "Entropy: 0.0\n",
-      "Jitter: 0.1324\n",
-      "Per sample accuracy: 0.6579\n",
-      "Label stability: 0.8381\n",
+      "Jitter: 0.126\n",
+      "Per sample accuracy: 0.6642\n",
+      "Label stability: 0.8409\n",
       "\n",
       "\n"
      ]
@@ -290,7 +290,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Analyze models in one run:  50%|█████     | 1/2 [00:00<00:00,  1.09it/s]2023-01-23 22:11:37 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n"
+      "Analyze models in one run:  50%|█████     | 1/2 [00:01<00:01,  1.23s/it]2023-01-23 23:09:57 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n"
      ]
     },
     {
@@ -315,10 +315,12 @@
      "text": [
       "\n",
       "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]\u001B[A\n",
-      "Classifiers testing by bootstrap:  30%|███       | 3/10 [00:00<00:00, 26.79it/s]\u001B[A\n",
-      "Classifiers testing by bootstrap:  70%|███████   | 7/10 [00:00<00:00, 30.01it/s]\u001B[A\n",
-      "Classifiers testing by bootstrap: 100%|██████████| 10/10 [00:00<00:00, 25.81it/s]\u001B[A\n",
-      "2023-01-23 22:11:37 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n"
+      "Classifiers testing by bootstrap:  20%|██        | 2/10 [00:00<00:00, 12.22it/s]\u001B[A\n",
+      "Classifiers testing by bootstrap:  40%|████      | 4/10 [00:00<00:00, 10.31it/s]\u001B[A\n",
+      "Classifiers testing by bootstrap:  60%|██████    | 6/10 [00:00<00:00, 10.26it/s]\u001B[A\n",
+      "Classifiers testing by bootstrap:  80%|████████  | 8/10 [00:00<00:00,  9.70it/s]\u001B[A\n",
+      "Classifiers testing by bootstrap: 100%|██████████| 10/10 [00:00<00:00, 10.48it/s]\u001B[A\n",
+      "2023-01-23 23:09:58 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n"
      ]
     },
     {
@@ -333,7 +335,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-23 22:11:38 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n"
+      "2023-01-23 23:09:59 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n"
      ]
     },
     {
@@ -343,14 +345,14 @@
       "\n",
       "\n",
       "##############################  Stability metrics  ##############################\n",
-      "General Ensemble Accuracy: 0.6686\n",
-      "Mean: 0.5345\n",
-      "Std: 0.0166\n",
-      "IQR: 0.0196\n",
+      "General Ensemble Accuracy: 0.6638\n",
+      "Mean: 0.535\n",
+      "Std: 0.0203\n",
+      "IQR: 0.0229\n",
       "Entropy: 0.0\n",
-      "Jitter: 0.045\n",
-      "Per sample accuracy: 0.6679\n",
-      "Label stability: 0.9407\n",
+      "Jitter: 0.0367\n",
+      "Per sample accuracy: 0.6629\n",
+      "Label stability: 0.9496\n",
       "\n",
       "\n"
      ]
@@ -359,7 +361,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Analyze models in one run: 100%|██████████| 2/2 [00:02<00:00,  1.27s/it]\n"
+      "Analyze models in one run: 100%|██████████| 2/2 [00:03<00:00,  1.53s/it]\n"
      ]
     },
     {
@@ -376,7 +378,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Analyze models in one run:   0%|          | 0/2 [00:00<?, ?it/s]2023-01-23 22:11:39 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n"
+      "Analyze models in one run:   0%|          | 0/2 [00:00<?, ?it/s]2023-01-23 23:09:59 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n"
      ]
     },
     {
@@ -396,8 +398,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Classifiers testing by bootstrap: 100%|██████████| 10/10 [00:00<00:00, 169.01it/s]\n",
-      "2023-01-23 22:11:39 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n"
+      "Classifiers testing by bootstrap: 100%|██████████| 10/10 [00:00<00:00, 186.30it/s]\n",
+      "2023-01-23 23:09:59 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n"
      ]
     },
     {
@@ -412,7 +414,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-23 22:11:39 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n"
+      "2023-01-23 23:09:59 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n"
      ]
     },
     {
@@ -422,14 +424,14 @@
       "\n",
       "\n",
       "##############################  Stability metrics  ##############################\n",
-      "General Ensemble Accuracy: 0.6742\n",
-      "Mean: 0.5236\n",
-      "Std: 0.0692\n",
-      "IQR: 0.0803\n",
+      "General Ensemble Accuracy: 0.6809\n",
+      "Mean: 0.522\n",
+      "Std: 0.0589\n",
+      "IQR: 0.0617\n",
       "Entropy: 0.0\n",
-      "Jitter: 0.1013\n",
-      "Per sample accuracy: 0.6664\n",
-      "Label stability: 0.8718\n",
+      "Jitter: 0.0913\n",
+      "Per sample accuracy: 0.6703\n",
+      "Label stability: 0.8833\n",
       "\n",
       "\n"
      ]
@@ -438,7 +440,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Analyze models in one run:  50%|█████     | 1/2 [00:01<00:01,  1.19s/it]2023-01-23 22:11:40 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n"
+      "Analyze models in one run:  50%|█████     | 1/2 [00:01<00:01,  1.01s/it]2023-01-23 23:10:00 abstract_overall_variance_analyzer.py INFO    : Start classifiers testing by bootstrap\n"
      ]
     },
     {
@@ -463,10 +465,14 @@
      "text": [
       "\n",
       "Classifiers testing by bootstrap:   0%|          | 0/10 [00:00<?, ?it/s]\u001B[A\n",
-      "Classifiers testing by bootstrap:  30%|███       | 3/10 [00:00<00:00, 23.55it/s]\u001B[A\n",
-      "Classifiers testing by bootstrap:  70%|███████   | 7/10 [00:00<00:00, 29.62it/s]\u001B[A\n",
-      "Classifiers testing by bootstrap: 100%|██████████| 10/10 [00:00<00:00, 23.44it/s]\u001B[A\n",
-      "2023-01-23 22:11:40 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n"
+      "Classifiers testing by bootstrap:  10%|█         | 1/10 [00:00<00:00,  9.19it/s]\u001B[A\n",
+      "Classifiers testing by bootstrap:  20%|██        | 2/10 [00:00<00:01,  4.83it/s]\u001B[A\n",
+      "Classifiers testing by bootstrap:  30%|███       | 3/10 [00:00<00:01,  4.71it/s]\u001B[A\n",
+      "Classifiers testing by bootstrap:  40%|████      | 4/10 [00:00<00:01,  4.79it/s]\u001B[A\n",
+      "Classifiers testing by bootstrap:  60%|██████    | 6/10 [00:00<00:00,  7.35it/s]\u001B[A\n",
+      "Classifiers testing by bootstrap:  80%|████████  | 8/10 [00:01<00:00,  8.69it/s]\u001B[A\n",
+      "Classifiers testing by bootstrap: 100%|██████████| 10/10 [00:01<00:00,  7.82it/s]\u001B[A\n",
+      "2023-01-23 23:10:01 abstract_overall_variance_analyzer.py INFO    : Successfully tested classifiers by bootstrap\n"
      ]
     },
     {
@@ -481,7 +487,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-23 22:11:40 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n"
+      "2023-01-23 23:10:02 abstract_overall_variance_analyzer.py INFO    : Successfully computed predict proba metrics\n"
      ]
     },
     {
@@ -491,14 +497,14 @@
       "\n",
       "\n",
       "##############################  Stability metrics  ##############################\n",
-      "General Ensemble Accuracy: 0.6487\n",
-      "Mean: 0.5233\n",
-      "Std: 0.0211\n",
-      "IQR: 0.0265\n",
+      "General Ensemble Accuracy: 0.6534\n",
+      "Mean: 0.5212\n",
+      "Std: 0.0183\n",
+      "IQR: 0.0209\n",
       "Entropy: 0.0\n",
-      "Jitter: 0.0484\n",
-      "Per sample accuracy: 0.6478\n",
-      "Label stability: 0.9331\n",
+      "Jitter: 0.0364\n",
+      "Per sample accuracy: 0.6504\n",
+      "Label stability: 0.9534\n",
       "\n",
       "\n"
      ]
@@ -507,7 +513,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Analyze models in one run: 100%|██████████| 2/2 [00:02<00:00,  1.31s/it]"
+      "Analyze models in one run: 100%|██████████| 2/2 [00:03<00:00,  1.76s/it]"
      ]
     },
     {
@@ -534,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 20,
    "id": "197eadaa",
    "metadata": {},
    "outputs": [],
