Created config for Folktables

--- a/notebooks/models_tuning/Models_Tuning_SVC.ipynb
+++ b/notebooks/models_tuning/Models_Tuning_SVC.ipynb
@@ -85,7 +85,7 @@
     "from pprint import pprint\n",
     "\n",
     "from source.custom_classes.data_loaders import ACSEmploymentDataset\n",
-    "from source.model_tuning_utils import test_baseline_models\n",
+    "from source.utils.model_tuning_utils import test_baseline_models\n",
     "\n",
     "plt.style.use('mpl20')\n",
     "matplotlib.rcParams['figure.dpi'] = 100"
