Added an inital version of documentatio for analyzers and user interfaces

--- a/notebooks/hypothesis_space/Hypothesis_Space_Exp_Folktables_GA_2018.ipynb
+++ b/notebooks/hypothesis_space/Hypothesis_Space_Exp_Folktables_GA_2018.ipynb
@@ -76,9 +76,9 @@
     "from datetime import datetime, timezone\n",
     "\n",
     "from configs.models_config_for_tuning import MODELS_CONFIG\n",
-    "from source.custom_initializers import create_config_obj, create_models_config_from_tuned_params_df\n",
-    "from source.custom_classes.data_loaders import ACSEmploymentDataset\n",
-    "from source.metrics_computation_interfaces import compute_metrics_multiple_runs"
+    "from source.utils.custom_initializers import create_config_obj, create_models_config_from_tuned_params_df\n",
+    "from source.user_interfaces.metrics_computation_interfaces import compute_metrics_multiple_runs\n",
+    "from source.custom_classes.data_loaders import ACSEmploymentDataset"
    ]
   },
   {
