--- a/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_Folktables_GA_2018_Results.ipynb
+++ b/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_Folktables_GA_2018_Results.ipynb
@@ -64,7 +64,7 @@
     "from IPython.display import display\n",
     "\n",
     "from configs.models_config_for_tuning import MODELS_CONFIG\n",
-    "from source.custom_initializers import create_config_obj, create_models_config_from_tuned_params_df\n",
+    "from source.utils.custom_initializers import create_config_obj, create_models_config_from_tuned_params_df\n",
     "from source.custom_classes.metrics_composer import MetricsComposer\n",
     "from source.custom_classes.metrics_visualizer import MetricsVisualizer\n",
     "\n",
