Added documentation for analyzers

--- a/docs/examples/cloning-and-mutating.ipynb
+++ b/docs/examples/cloning-and-mutating.ipynb
@@ -48,14 +48,14 @@
       ],
       "text/plain": [
        "\n",
-       "\u001b[1m{\u001b[0m\n",
-       "    \u001b[32m'ordinal_date'\u001b[0m: \u001b[1;36m20.59955380229643\u001b[0m,\n",
-       "    \u001b[32m'gallup'\u001b[0m: \u001b[1;36m0.39114944304212645\u001b[0m,\n",
-       "    \u001b[32m'ipsos'\u001b[0m: \u001b[1;36m0.4101918314868111\u001b[0m,\n",
-       "    \u001b[32m'morning_consult'\u001b[0m: \u001b[1;36m0.12042970179504908\u001b[0m,\n",
-       "    \u001b[32m'rasmussen'\u001b[0m: \u001b[1;36m0.18951231512561392\u001b[0m,\n",
-       "    \u001b[32m'you_gov'\u001b[0m: \u001b[1;36m0.04991712783831687\u001b[0m\n",
-       "\u001b[1m}\u001b[0m\n"
+       "\u001B[1m{\u001B[0m\n",
+       "    \u001B[32m'ordinal_date'\u001B[0m: \u001B[1;36m20.59955380229643\u001B[0m,\n",
+       "    \u001B[32m'gallup'\u001B[0m: \u001B[1;36m0.39114944304212645\u001B[0m,\n",
+       "    \u001B[32m'ipsos'\u001B[0m: \u001B[1;36m0.4101918314868111\u001B[0m,\n",
+       "    \u001B[32m'morning_consult'\u001B[0m: \u001B[1;36m0.12042970179504908\u001B[0m,\n",
+       "    \u001B[32m'rasmussen'\u001B[0m: \u001B[1;36m0.18951231512561392\u001B[0m,\n",
+       "    \u001B[32m'you_gov'\u001B[0m: \u001B[1;36m0.04991712783831687\u001B[0m\n",
+       "\u001B[1m}\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -98,7 +98,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m{\u001b[0m\u001b[1m}\u001b[0m\n"
+       "\u001B[1m{\u001B[0m\u001B[1m}\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -129,7 +129,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;36m0.03\u001b[0m\n"
+       "\u001B[1;36m0.03\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -159,7 +159,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;35mAdam\u001b[0m\u001b[1m(\u001b[0m\u001b[1m{\u001b[0m\u001b[32m'lr'\u001b[0m: \u001b[1;35mConstant\u001b[0m\u001b[1m(\u001b[0m\u001b[1m{\u001b[0m\u001b[32m'learning_rate'\u001b[0m: \u001b[1;36m0.1\u001b[0m\u001b[1m}\u001b[0m\u001b[1m)\u001b[0m, \u001b[32m'n_iterations'\u001b[0m: \u001b[1;36m0\u001b[0m, \u001b[32m'beta_1'\u001b[0m: \u001b[1;36m0.9\u001b[0m, \u001b[32m'beta_2'\u001b[0m: \u001b[1;36m0.999\u001b[0m, \u001b[32m'eps'\u001b[0m: \u001b[1;36m1e-08\u001b[0m, \u001b[32m'm'\u001b[0m: \u001b[3;35mNone\u001b[0m, \u001b[32m'v'\u001b[0m: \u001b[3;35mNone\u001b[0m\u001b[1m}\u001b[0m\u001b[1m)\u001b[0m\n"
+       "\u001B[1;35mAdam\u001B[0m\u001B[1m(\u001B[0m\u001B[1m{\u001B[0m\u001B[32m'lr'\u001B[0m: \u001B[1;35mConstant\u001B[0m\u001B[1m(\u001B[0m\u001B[1m{\u001B[0m\u001B[32m'learning_rate'\u001B[0m: \u001B[1;36m0.1\u001B[0m\u001B[1m}\u001B[0m\u001B[1m)\u001B[0m, \u001B[32m'n_iterations'\u001B[0m: \u001B[1;36m0\u001B[0m, \u001B[32m'beta_1'\u001B[0m: \u001B[1;36m0.9\u001B[0m, \u001B[32m'beta_2'\u001B[0m: \u001B[1;36m0.999\u001B[0m, \u001B[32m'eps'\u001B[0m: \u001B[1;36m1e-08\u001B[0m, \u001B[32m'm'\u001B[0m: \u001B[3;35mNone\u001B[0m, \u001B[32m'v'\u001B[0m: \u001B[3;35mNone\u001B[0m\u001B[1m}\u001B[0m\u001B[1m)\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -263,14 +263,14 @@
       ],
       "text/plain": [
        "\n",
-       "\u001b[1m{\u001b[0m\n",
-       "    \u001b[32m'ordinal_date'\u001b[0m: \u001b[1;36m20.59955380229643\u001b[0m,\n",
-       "    \u001b[32m'gallup'\u001b[0m: \u001b[1;36m0.39114944304212645\u001b[0m,\n",
-       "    \u001b[32m'ipsos'\u001b[0m: \u001b[1;36m0.4101918314868111\u001b[0m,\n",
-       "    \u001b[32m'morning_consult'\u001b[0m: \u001b[1;36m0.12042970179504908\u001b[0m,\n",
-       "    \u001b[32m'rasmussen'\u001b[0m: \u001b[1;36m0.18951231512561392\u001b[0m,\n",
-       "    \u001b[32m'you_gov'\u001b[0m: \u001b[1;36m0.04991712783831687\u001b[0m\n",
-       "\u001b[1m}\u001b[0m\n"
+       "\u001B[1m{\u001B[0m\n",
+       "    \u001B[32m'ordinal_date'\u001B[0m: \u001B[1;36m20.59955380229643\u001B[0m,\n",
+       "    \u001B[32m'gallup'\u001B[0m: \u001B[1;36m0.39114944304212645\u001B[0m,\n",
+       "    \u001B[32m'ipsos'\u001B[0m: \u001B[1;36m0.4101918314868111\u001B[0m,\n",
+       "    \u001B[32m'morning_consult'\u001B[0m: \u001B[1;36m0.12042970179504908\u001B[0m,\n",
+       "    \u001B[32m'rasmussen'\u001B[0m: \u001B[1;36m0.18951231512561392\u001B[0m,\n",
+       "    \u001B[32m'you_gov'\u001B[0m: \u001B[1;36m0.04991712783831687\u001B[0m\n",
+       "\u001B[1m}\u001B[0m\n"
       ]
      },
      "metadata": {},
